fixed the map not showing up on map.html, but also makes the carousel on the index.html shift to the right a little

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,25 +83,25 @@ section {
 
 /* Map Page */
 
-.detail-area, .map-area, .row {
-        height: 99%;
+.detail-area, .map-area, .row, .container, body, html {
+	height: 95%;
 }
 
 .detail-area, .map-area {
-        border: 5px solid blue;
+	border: 5px solid blue;
 }
 
 .map-area {
-        float: left;
-        width: 59%;
+	float: left;
+	width: 59%;
 }
 
 .detail-area {
-        float: right;
-        margin-left: 1%;
-        width: 40%;
+	float: right;
+	margin-left: 1%;
+	width: 40%;
 }
 
 .map-container {
-        height: 98%;
+	height: 98%;
 }
